Squashing bugs.

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,7 +6,7 @@
 }
 
 .fix-nav {
-  //position: fixed;
+  position: fixed;
   width: 100%;
   height: 86px;
   font-family: 'Cuprum', sans-serif;
@@ -42,10 +42,9 @@
   }
 
 nav.scroll-nav {
-  //margin-left: 300px;
-  margin-top: 88px;
+  margin-top: 86px;
   margin-bottom: 15px;
-  //position: fixed;
+  position: fixed;
   height: 50px;
   width: 100%;
   background-color: white;
@@ -53,6 +52,7 @@ nav.scroll-nav {
   display: flex;
   justify-content: flex-start;
   padding-top:9px;
+  font-size: 130%;
 }
 
 .scroll-nav, nav li, nav a {
@@ -626,24 +626,26 @@ h2 {
   width: 260px;
   margin: 40px auto;
   display: inline-block;
+  text-align: center;
 }
 
 
 
 //event css
 .main-events {
-  margin-top: 100px;
+  margin-top: 140px;
 }
 
 .general-events {
-  border: 1px solid lightgrey;
+  //border: 1px solid lightgrey;
   margin: 30px;
 }
 
 .general-events-title {
-  font-size: 160%;
-  border: 1px solid lightgrey;
+  font-size: 175%;
+  //border: 1px solid lightgrey;
   padding-left: 40px;
+  text-decoration: underline;
 }
 
 .event-title {
@@ -674,8 +676,8 @@ h2 {
 }
 
 .user-events {
-  border: 1px solid lightgrey;
-  height: 400px;
+  border: 1px solid #1D335F;
+  height: 500px;
   width: 100%;
   display: flex;
   margin-top: 141px;
@@ -711,14 +713,18 @@ a.button {
   margin: 5px;
 }
 
-//user box
-.user-content {
-
-}
-
 .list-user-events {
   padding-top: 20px;
   clear: both;
+}
+
+.user-content {
+  text-align: center;
+}
+
+.user-attending {
+  font-size: 125%;
+  font-weight: bold;
 }
 
 .user-rsvp {
@@ -728,7 +734,12 @@ a.button {
   // justify-content: space-around;
 }
 .rsvp-list li {
-  border-top: 1px solid lightgrey;
+  border-top: 1px solid #F3BA3A;
+  padding: 5px;
+}
+
+.rsvp-list a {
+  color: #1D335F;
 }
 
 //select-event css
